@@ -1,7 +1,5 @@
 package org.rpis5.chapters.chapter_06.websocket;
 
-import java.util.Collections;
-
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.reactive.HandlerAdapter;
@@ -9,13 +7,15 @@ import org.springframework.web.reactive.HandlerMapping;
 import org.springframework.web.reactive.handler.SimpleUrlHandlerMapping;
 import org.springframework.web.reactive.socket.server.support.WebSocketHandlerAdapter;
 
+import java.util.Map;
+
 @Configuration
 public class WebSocketConfiguration {
 
     @Bean
     public HandlerMapping handlerMapping() {
         SimpleUrlHandlerMapping mapping = new SimpleUrlHandlerMapping();
-        mapping.setUrlMap(Collections.singletonMap("/ws/echo", new EchoWebSocketHandler()));
+        mapping.setUrlMap(Map.of("/ws/echo", new EchoWebSocketHandler()));
         mapping.setOrder(-1);
         return mapping;
     }
